Correct overflow in small screens

--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ button:hover, button:focus-visible {
 
 .container {
   height: 560px;
-  width: 560px;
+  min-width: 560px;
+  max-width: 560px;
   background-color: #fff;
   border: 10px solid rgb(99, 92, 158);
   border-radius: 10px;
